syntax = "proto3";

option go_package = "./pb";

package pb;

// 登录入参
message LoginReq {
  string Username = 1;
  string Password = 2;
}
// 登录出参
message LoginReply {
  User user = 1;
}
// sys_user
message User {
  string UserID = 1;
  string UUID = 2;
  string Username = 3;
  string Email = 4;
  string Nickname = 5;
  string Avatar = 6;
  int64 Type = 7;
  int64 Status = 8;
  uint64 ID = 9;
  int64  CreatedAt = 10;
  int64  UpdatedAt = 11;
}

service system {
  // 系统登录
  rpc Login (LoginReq) returns (LoginReply);
}